Fix all broken links
Signed-off-by: Indicado <indicado@walrus.gg>

--- a/docs/guides/xml-pointers/filter-apply-order.mdx
+++ b/docs/guides/xml-pointers/filter-apply-order.mdx
@@ -3,7 +3,7 @@ id: filter-apply-order
 title: Filter Apply Order
 ---
 
-After proto `1.3.3` and above, the order that you [apply](/modules/regions#applying) filters to regions affects their behavior.
+After proto `1.3.3` and above, the order that you [apply](/docs/modules/mechanics/regions#applying) filters to regions affects their behavior.
 Here's an example.
 
 Let's start out with a basic filter that **denies** everything **except** TNT.
