--- a/docs/modules/blocks/blockdrops.mdx
+++ b/docs/modules/blocks/blockdrops.mdx
@@ -5,7 +5,7 @@ title: Block Drops
 
 This module can be used to customize what drops when blocks are broken, and what the broken block is replaced with. It can also be used to customize drops when a block is punched by a player in adventure mode, or to change a block's type when a player walks on it. All sub-elements are optional, if there are no elements all blocks will simply drop nothing.
 
-Custom drops also apply to blocks broken by explosions. The custom drops are reduced by 70% just like default explosion drops, though this can be customized through the [TNT module](/modules/tnt). Blocks broken by means other than mining or explosions currently do not cause custom drops.
+Custom drops also apply to blocks broken by explosions. The custom drops are reduced by 70% just like default explosion drops, though this can be customized through the [TNT module](/docs/modules/gear/tnt). Blocks broken by means other than mining or explosions currently do not cause custom drops.
 
 <div className="table-container">
   <table>
@@ -69,7 +69,7 @@ Custom drops also apply to blocks broken by explosions. The custom drops are red
           The blocks that get modified by this rule.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td></td>
       </tr>
@@ -87,7 +87,7 @@ Custom drops also apply to blocks broken by explosions. The custom drops are red
           The region this rule applies to.
         </td>
         <td>
-          <a href="/modules/regions">Region</a>
+          <a href="/docs/modules/mechanics/regions">Region</a>
         </td>
         <td></td>
       </tr>
@@ -105,7 +105,7 @@ Custom drops also apply to blocks broken by explosions. The custom drops are red
           The kit to give players when this rule applies.
         </td>
         <td>
-          <a href="/modules/kits">Kit ID</a>
+          <a href="/docs/modules/gear/kits">Kit ID</a>
         </td>
         <td></td>
       </tr>
@@ -234,7 +234,7 @@ Custom drops also apply to blocks broken by explosions. The custom drops are red
           Filter what blocks get modified by this rule.
         </td>
         <td>
-          <a href="/modules/filters">Filters</a>
+          <a href="/docs/modules/mechanics/filters">Filters</a>
         </td>
         <td></td>
       </tr>
@@ -252,7 +252,7 @@ Custom drops also apply to blocks broken by explosions. The custom drops are red
           The region this rule applies to.
         </td>
         <td>
-          <a href="/modules/regions">Regions</a>
+          <a href="/docs/modules/mechanics/regions">Regions</a>
         </td>
         <td></td>
       </tr>
@@ -270,7 +270,7 @@ Custom drops also apply to blocks broken by explosions. The custom drops are red
           The kit to give players when this rule applies.
         </td>
         <td>
-          <a href="/modules/kits">Kits</a>
+          <a href="/docs/modules/gear/kits">Kits</a>
         </td>
         <td></td>
       </tr>
@@ -280,7 +280,7 @@ Custom drops also apply to blocks broken by explosions. The custom drops are red
         </td>
         <td>The items which get dropped when a matching block is mined.</td>
         <td>
-          <a href="/modules/items">Items</a>
+          <a href="/docs/modules/gear/items">Items</a>
         </td>
         <td></td>
       </tr>
