--- a/docs/modules/blocks/falling-blocks.mdx
+++ b/docs/modules/blocks/falling-blocks.mdx
@@ -70,7 +70,7 @@ Falling blocks will not fall if they touch a sticky block. If you make a falling
           Filter what blocks get modified by this rule.
         </td>
         <td>
-          <a href="/modules/filters">Block Filter</a>
+          <a href="/docs/modules/mechanics/filters">Block Filter</a>
         </td>
         <td />
       </tr>
@@ -89,7 +89,7 @@ Falling blocks will not fall if they touch a sticky block. If you make a falling
           The blocks that are sticky.
         </td>
         <td>
-          <a href="/modules/filters">Block Filter</a>
+          <a href="/docs/modules/mechanics/filters">Block Filter</a>
         </td>
         <td />
       </tr>
@@ -145,8 +145,8 @@ Falling blocks will not fall if they touch a sticky block. If you make a falling
           Also accepts regions to limit the rule to a certain area.
         </td>
         <td>
-          <a href="/modules/filters">Block Filters</a> &{" "}
-          <a href="/modules/regions">Regions</a>
+          <a href="/docs/modules/mechanics/filters">Block Filters</a> &{" "}
+          <a href="/docs/modules/mechanics/regions">Regions</a>
         </td>
         <td></td>
       </tr>
@@ -165,7 +165,7 @@ Falling blocks will not fall if they touch a sticky block. If you make a falling
           The blocks that are sticky.
         </td>
         <td>
-          <a href="/modules/filters">Block Filters</a>
+          <a href="/docs/modules/mechanics/filters">Block Filters</a>
         </td>
         <td></td>
       </tr>
