--- a/docs/modules/blocks/renewables.mdx
+++ b/docs/modules/blocks/renewables.mdx
@@ -70,7 +70,7 @@ specify blocks to renew. If neither are specified, the renewable affects all blo
           Region in which blocks will be renewed.
         </td>
         <td>
-          <a href="/modules/regions">Region</a>
+          <a href="/docs/modules/mechanics/regions">Region</a>
         </td>
         <td>Everywhere</td>
       </tr>
@@ -88,7 +88,7 @@ specify blocks to renew. If neither are specified, the renewable affects all blo
           Filter which blocks are renewed.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td>Everything</td>
       </tr>
@@ -106,7 +106,7 @@ specify blocks to renew. If neither are specified, the renewable affects all blo
           Filter which blocks can be replaced by renewing blocks.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td>Everything</td>
       </tr>
@@ -124,7 +124,7 @@ specify blocks to renew. If neither are specified, the renewable affects all blo
           Filter which renewable blocks are shuffled.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td>Nothing</td>
       </tr>
@@ -236,7 +236,7 @@ specify blocks to renew. If neither are specified, the renewable affects all blo
           The region the renewable applies to.
         </td>
         <td>
-          <a href="/modules/regions">Bounded Regions</a>
+          <a href="/docs/modules/mechanics/regions">Bounded Regions</a>
         </td>
       </tr>
       <tr>
@@ -253,7 +253,7 @@ specify blocks to renew. If neither are specified, the renewable affects all blo
           Filter which blocks are renewed.
         </td>
         <td>
-          <a href="/modules/filters">Filters</a>
+          <a href="/docs/modules/mechanics/filters">Filters</a>
         </td>
       </tr>
       <tr>
@@ -270,7 +270,7 @@ specify blocks to renew. If neither are specified, the renewable affects all blo
           Filter which blocks are replaced.
         </td>
         <td>
-          <a href="/modules/filters">Filters</a>
+          <a href="/docs/modules/mechanics/filters">Filters</a>
         </td>
       </tr>
       <tr>
@@ -287,7 +287,7 @@ specify blocks to renew. If neither are specified, the renewable affects all blo
           Filter which blocks are shuffled.
         </td>
         <td>
-          <a href="/modules/filters">Filters</a>
+          <a href="/docs/modules/mechanics/filters">Filters</a>
         </td>
       </tr>
     </tbody>
