--- a/docs/modules/environment/border.mdx
+++ b/docs/modules/environment/border.mdx
@@ -97,7 +97,7 @@ Attributes for multiple world borders can be applied for all borders by specifyi
           Filter when this world border is in effect.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td></td>
       </tr>
@@ -207,7 +207,7 @@ Attributes for multiple world borders can be applied for all borders by specifyi
           Filter when this world border is in effect.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
       </tr>
     </tbody>
