--- a/docs/modules/environment/mobs.mdx
+++ b/docs/modules/environment/mobs.mdx
@@ -5,7 +5,7 @@ title: Mob Spawning
 
 By default PGM disables all mob spawning.
 The mobs module allows this behavior to be customized to allow spawning of specific mobs.
-This module makes use of the `<spawn>`, `<mob>` and `<entity>` [filters](/modules/filters) to only allow specific mobs to spawn.
+This module makes use of the `<spawn>`, `<mob>` and `<entity>` [filters](/docs/modules/mechanics/filters) to only allow specific mobs to spawn.
 Mob spawns can also be filtered against any other filter type including regions.
 
 <div className="table-container">
@@ -44,7 +44,7 @@ Mob spawns can also be filtered against any other filter type including regions.
           Filter what mobs can spawn when and where.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
       </tr>
       <tr>
@@ -67,7 +67,7 @@ Mob spawns can also be filtered against any other filter type including regions.
           Filter what mobs can spawn when and where.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
       </tr>
     </tbody>
