--- a/docs/modules/environment/time.mdx
+++ b/docs/modules/environment/time.mdx
@@ -5,7 +5,7 @@ title: Time & Dimension
 
 ### Time
 
-Lock the time to what the map was saved with. Change the maps time to midnight and then save it. The time will then remain locked to midnight the whole game through. This can also be accomplished with the `doDaylightCycle` [gamerule](/modules/gamerules).
+Lock the time to what the map was saved with. Change the maps time to midnight and then save it. The time will then remain locked to midnight the whole game through. This can also be accomplished with the `doDaylightCycle` [gamerule](/docs/modules/mechanics/gamerules).
 
 ```xml
 <timelock>on</timelock>  <!-- Defaults to off -->
