--- a/docs/modules/format/teams.mdx
+++ b/docs/modules/format/teams.mdx
@@ -4,7 +4,7 @@ title: Teams
 ---
 
 This module is used to specify the teams used in the match and what their attributes are.
-Matches without teams can be setup with the [players](/modules/players) module.
+Matches without teams can be setup with the [players](/docs/modules/format/players) module.
 
 The soft player limit for each team is set with the `max=""` attribute and the hard limit with `max-overfill`. If max overfill is not explicitly defined the default will be set to 25% over the maximum team size. Players will not be able to join teams once the max overfill team size is reached.
 
