--- a/docs/modules/gear/classes.mdx
+++ b/docs/modules/gear/classes.mdx
@@ -109,7 +109,7 @@ Classes allow the player to pick a specific class at the beginning of the game w
           classes (ghost squadron is "ghost").
         </td>
         <td>
-          <a href="/modules/classes">Class Family Name</a>
+          <a href="/docs/modules/gear/classes">Class Family Name</a>
         </td>
         <td></td>
       </tr>
@@ -174,7 +174,7 @@ Classes allow the player to pick a specific class at the beginning of the game w
         </td>
         <td>The kit given to players using this class.</td>
         <td>
-          <a href="/modules/kits">Kits</a>
+          <a href="/docs/modules/gear/kits">Kits</a>
         </td>
       </tr>
     </tbody>
