--- a/docs/modules/gear/crafting.mdx
+++ b/docs/modules/gear/crafting.mdx
@@ -144,7 +144,7 @@ The crafting module allows custom shaped and shapeless crafting recipes and smel
           Accepts all attributes and sub-elements of a normal kit item.
         </td>
         <td>
-          <a href="/modules/items">Item</a>
+          <a href="/docs/modules/gear/items">Item</a>
         </td>
       </tr>
     </tbody>
