--- a/docs/modules/gear/items.mdx
+++ b/docs/modules/gear/items.mdx
@@ -273,7 +273,7 @@ or on the [bukkit docs - Material](https://hub.spigotmc.org/javadocs/bukkit/org/
         </td>
         <td>Make this item shoot a custom projectile.</td>
         <td>
-          <a href="/modules/projectiles">Projectile ID</a>
+          <a href="/docs/modules/projectiles">Projectile ID</a>
         </td>
         <td></td>
       </tr>
@@ -547,7 +547,7 @@ However, if any custom effects are present, they will completely replace the def
 By default when a player drinks a potion bottle the empty bottle is automatically removed from the players inventory.
 This behavior can be disabled with the `<keep-potion-bottles/>` tag.
 
-See [Potion Effects](/modules/potions) for details on the effects element.
+See [Potion Effects](/docs/modules/gear/potions) for details on the effects element.
 
 Also see [Minecraft wiki - Potion](http://www.minecraftwiki.net/wiki/Potions)
 and [Minecraft wiki - Status Effect](http://minecraft.gamepedia.com/Status_effect)
@@ -601,7 +601,7 @@ and [Minecraft wiki - Status Effect](http://minecraft.gamepedia.com/Status_effec
         </td>
         <td>Custom effect</td>
         <td>
-          <a href="/modules/potions">Potion Effect</a>
+          <a href="/docs/modules/gear/potions">Potion Effect</a>
         </td>
       </tr>
     </tbody>
@@ -843,7 +843,7 @@ _Examples_
 ### Attribute Modifiers
 
 Attribute modifiers can be applied to items in the same way they are applied to kits.
-See [Attribute Kits](/modules/kits#attributes) for details.
+See [Attribute Kits](/docs/modules/gear/kits#attributes) for details.
 
 Additionally, a `slot` can be specified, in which case the modifier will only be applied
 when the item is in that slot. This must be an [armor or hand slot](/reference/inventory).
