--- a/docs/modules/gear/kill-rewards.mdx
+++ b/docs/modules/gear/kill-rewards.mdx
@@ -64,7 +64,7 @@ Then once they have collected enough ingots they can craft armor, etc.
           Filter who can claim this reward and when.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
       </tr>
       <tr>
@@ -81,7 +81,7 @@ Then once they have collected enough ingots they can craft armor, etc.
           The kit to give players as the kill reward.
         </td>
         <td>
-          <a href="/modules/kits">Kit ID</a>
+          <a href="/docs/modules/gear/kits">Kit ID</a>
         </td>
       </tr>
       <tr>
@@ -95,7 +95,7 @@ Then once they have collected enough ingots they can craft armor, etc.
         </td>
         <td>Individual items given as a kill reward.</td>
         <td>
-          <a href="/modules/items">Item</a>
+          <a href="/docs/modules/gear/items">Item</a>
         </td>
       </tr>
       <tr>
@@ -112,7 +112,7 @@ Then once they have collected enough ingots they can craft armor, etc.
           Filter who can claim this reward and when.
         </td>
         <td>
-          <a href="/modules/filters">Filters</a>
+          <a href="/docs/modules/mechanics/filters">Filters</a>
         </td>
       </tr>
       <tr>
@@ -129,7 +129,7 @@ Then once they have collected enough ingots they can craft armor, etc.
           The kit to give as the reward.
         </td>
         <td>
-          <a href="/modules/kits">Kits</a>
+          <a href="/docs/modules/gear/kits">Kits</a>
         </td>
       </tr>
     </tbody>
