--- a/docs/modules/gear/pickups.mdx
+++ b/docs/modules/gear/pickups.mdx
@@ -117,7 +117,7 @@ A `<point>` region does not return a randomized position but can still be used t
           Filter if this pickup is and can be spawned.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td>
           <label>{`<always/>`}</label>
@@ -137,7 +137,7 @@ A `<point>` region does not return a randomized position but can still be used t
           Filter who can pick up the pickup's kit.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td>
           <label>{`<always/>`}</label>
@@ -158,7 +158,7 @@ A `<point>` region does not return a randomized position but can still be used t
           Region where the pickup entity is placed into.
         </td>
         <td>
-          <a href="/modules/regions">Randomize-able Region</a>
+          <a href="/docs/modules/mechanics/regions">Randomize-able Region</a>
         </td>
         <td></td>
       </tr>
@@ -176,7 +176,7 @@ A `<point>` region does not return a randomized position but can still be used t
           The kit to give to players who pick up this pickup.
         </td>
         <td>
-          <a href="/modules/kits">Kit ID</a>
+          <a href="/docs/modules/gear/kits">Kit ID</a>
         </td>
         <td></td>
       </tr>
@@ -256,7 +256,7 @@ A `<point>` region does not return a randomized position but can still be used t
           Filter if this pickup is and can be spawned.
         </td>
         <td>
-          <a href="/modules/filters">Filters</a>
+          <a href="/docs/modules/mechanics/filters">Filters</a>
         </td>
         <td>
           <label>{`<always/>`}</label>
@@ -276,7 +276,7 @@ A `<point>` region does not return a randomized position but can still be used t
           Filter who can pick up the pickup's kit.
         </td>
         <td>
-          <a href="/modules/filters">Filters</a>
+          <a href="/docs/modules/mechanics/filters">Filters</a>
         </td>
         <td>
           <label>{`<always/>`}</label>
@@ -297,7 +297,7 @@ A `<point>` region does not return a randomized position but can still be used t
           Region where this pickup is placed into.
         </td>
         <td>
-          <a href="/modules/regions">Randomize-able Regions</a>
+          <a href="/docs/modules/mechanics/regions">Randomize-able Regions</a>
         </td>
         <td></td>
       </tr>
@@ -315,7 +315,7 @@ A `<point>` region does not return a randomized position but can still be used t
           The kit to give to players who pick up this pickup.
         </td>
         <td>
-          <a href="/modules/kits">Kits</a>
+          <a href="/docs/modules/gear/kits">Kits</a>
         </td>
         <td></td>
       </tr>
