--- a/docs/modules/gear/potions.mdx
+++ b/docs/modules/gear/potions.mdx
@@ -4,7 +4,7 @@ title: Potion Effects
 ---
 
 The potion `<effect>` element can be used in a kit to apply potion effects directly to a player,
-or used to give a custom effect to a [potion bottle item](/modules/items#potions).
+or used to give a custom effect to a [potion bottle item](/docs/modules/gear/items#potions).
 
 Duration specifies how long the potion will last, and amplifier determines what level / how strong the potion is.
 The effect type is specified by its [Minecraft ID](http://minecraft.gamepedia.com/Data_values#Status_effects).
