--- a/docs/modules/gear/projectiles.mdx
+++ b/docs/modules/gear/projectiles.mdx
@@ -3,7 +3,7 @@ id: projectiles
 title: Custom Projectiles
 ---
 
-Custom projectile types can be defined and applied to items in [kits](/modules/kits).
+Custom projectile types can be defined and applied to items in [kits](/docs/modules/gear/kits).
 These items effectively become either weapons that shoot the custom projectile,
 or the item form of the custom projectile itself.
 
@@ -150,7 +150,7 @@ or the item form of the custom projectile itself.
         </td>
         <td>The potion effects to apply to players hit by this projectile.</td>
         <td>
-          <a href="/modules/potions">Potion Effect</a>
+          <a href="/docs/modules/gear/potions">Potion Effect</a>
         </td>
         <td></td>
       </tr>
@@ -168,7 +168,7 @@ or the item form of the custom projectile itself.
           Filter if/what blocks get destroyed when hit with this projectile.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td>
           <label>deny-all</label>
@@ -214,7 +214,7 @@ or the item form of the custom projectile itself.
           Filter if/what blocks get destroyed when hit with this projectile.
         </td>
         <td>
-          <a href="/modules/filters">Filters</a>
+          <a href="/docs/modules/mechanics/filters">Filters</a>
         </td>
       </tr>
       <tr>
@@ -223,7 +223,7 @@ or the item form of the custom projectile itself.
         </td>
         <td>A potion effect to apply to players hit by this projectile.</td>
         <td>
-          <a href="/modules/potions">Potion Effect</a>
+          <a href="/docs/modules/gear/potions">Potion Effect</a>
         </td>
       </tr>
     </tbody>
@@ -252,7 +252,7 @@ or the item form of the custom projectile itself.
 
 ### Modifying Bow Projectiles
 
-Bows can be modified to shoot a different projectile at a custom speed. The PGM plugin will calculate the damage the projectile does using the same formula as minecraft does for arrows. This means that a flying fish with a velocity of 40 will almost certainly kill you. Projectiles can also have custom [potion effects](/modules/potions) which are applied to the target when it is hit.
+Bows can be modified to shoot a different projectile at a custom speed. The PGM plugin will calculate the damage the projectile does using the same formula as minecraft does for arrows. This means that a flying fish with a velocity of 40 will almost certainly kill you. Projectiles can also have custom [potion effects](/docs/modules/gear/potions) which are applied to the target when it is hit.
 `NOTE:` You can currently only modify all bow projectiles, this means no normal and custom bow at the same time.
 
 <div className="table-container">
@@ -305,7 +305,7 @@ Bows can be modified to shoot a different projectile at a custom speed. The PGM 
         </td>
         <td>A potion effect to apply to players hit by the bow projectile.</td>
         <td>
-          <a href="/modules/potions">Potion Effect</a>
+          <a href="/docs/modules/gear/potions">Potion Effect</a>
         </td>
       </tr>
     </tbody>
