--- a/docs/modules/gear/tnt.mdx
+++ b/docs/modules/gear/tnt.mdx
@@ -3,7 +3,7 @@ id: tnt
 title: TNT
 ---
 
-You can modify TNT explosion & placing behavior with this module. Destruction of terrain can be easily disabled with the blockdamage element. If it is set to `false` the yield element will have no effect since there won't be any block drops. TNT damage can be further limited with the [disable damage module](/modules/disabledamage#block_explosion).
+You can modify TNT explosion & placing behavior with this module. Destruction of terrain can be easily disabled with the blockdamage element. If it is set to `false` the yield element will have no effect since there won't be any block drops. TNT damage can be further limited with the [disable damage module](/docs/modules/mechanics/damage#disable-damage).
 
 By default dispensers containing TNT will ignite their TNT when exploded. This behavior can be customized with the `<dispenser-tnt-limit>` and `<dispenser-tnt-multiplier>` elements, setting either of these to 0 will disable it.
 
