--- a/docs/modules/information/broadcasts.mdx
+++ b/docs/modules/information/broadcasts.mdx
@@ -122,7 +122,7 @@ map. It should not be used to for generic OCN related messages.
           or if it's skipped.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
       </tr>
     </tbody>
@@ -156,7 +156,7 @@ map. It should not be used to for generic OCN related messages.
           or if it's skipped.
         </td>
         <td>
-          <a href="/modules/filters">Filters</a>
+          <a href="/docs/modules/mechanics/filters">Filters</a>
         </td>
       </tr>
     </tbody>
