--- a/docs/modules/mechanics/damage.mdx
+++ b/docs/modules/mechanics/damage.mdx
@@ -28,7 +28,7 @@ The difficulty level can be set to `peaceful`, `easy`, `normal`, or `hard`. The 
 ### Hunger
 
 Specify if a player can starve to death, usually used with the difficulty setting.<br/>
-This can also be accomplished with the `naturalRegeneration` [gamerule](/modules/gamerules).
+This can also be accomplished with the `naturalRegeneration` [gamerule](/docs/modules/mechanics/gamerules).
 
 ```xml
 <hunger>
