--- a/docs/modules/mechanics/gamerules.mdx
+++ b/docs/modules/mechanics/gamerules.mdx
@@ -5,7 +5,7 @@ title: Gamerules
 
 Minecraft's built in game rules can be set via the `<gamerules>` module. Not all gamerules are supported, the table below lists which are supported.
 
-When stopping the daylight cycle, you should either use the `<doDaylightCycle>` gamerule, or the [timelock](/modules/other_settings#timelock) element. One will overwrite the other, so be consistent.
+When stopping the daylight cycle, you should either use the `<doDaylightCycle>` gamerule.
 
 <div className="table-container">
   <table>
@@ -123,7 +123,8 @@ Example
           <label>doMobSpawning</label>
         </td>
         <td>
-          Not supported in favor of the <a href="/modules/mobs">mobs</a> module.
+          Not supported in favor of the{" "}
+          <a href="/docs/modules/environment/mobs">mobs</a> module.
         </td>
       </tr>
       <tr>
