--- a/docs/modules/mechanics/lanes.mdx
+++ b/docs/modules/mechanics/lanes.mdx
@@ -33,7 +33,7 @@ Lanes are used in RFW style maps with two parallel lanes for the teams. They pre
         </td>
         <td>A single lane definition.</td>
         <td>
-          <a href="/modules/regions">Regions</a>
+          <a href="/docs/modules/mechanics/regions">Regions</a>
         </td>
       </tr>
     </tbody>
@@ -61,7 +61,7 @@ Lanes are used in RFW style maps with two parallel lanes for the teams. They pre
           The team the lane belongs to and in which they have to stay inside.
         </td>
         <td>
-          <a href="/modules/teams">Team ID</a>
+          <a href="/docs/modules/format/teams">Team ID</a>
         </td>
       </tr>
     </tbody>
