--- a/docs/modules/mechanics/portals.mdx
+++ b/docs/modules/mechanics/portals.mdx
@@ -91,7 +91,7 @@ Portals respond to any player move event, this allows almost instant teleportati
           </i>
         </td>
         <td>
-          <a href="/modules/regions">Region</a>
+          <a href="/docs/modules/mechanics/regions">Region</a>
         </td>
         <td></td>
       </tr>
@@ -115,7 +115,7 @@ Portals respond to any player move event, this allows almost instant teleportati
           </i>
         </td>
         <td>
-          <a href="/modules/regions">Randomize-able Region</a>
+          <a href="/docs/modules/mechanics/regions">Randomize-able Region</a>
         </td>
         <td></td>
       </tr>
@@ -133,7 +133,7 @@ Portals respond to any player move event, this allows almost instant teleportati
           Filter portal player access.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td>
           <label>{`<always/>`}</label>
@@ -153,7 +153,7 @@ Portals respond to any player move event, this allows almost instant teleportati
           Apply forward transform on rising edge
         </td>
         <td>
-          <a href="/modules/filters">Dynamic Filter</a>
+          <a href="/docs/modules/mechanics/filters">Dynamic Filter</a>
         </td>
         <td></td>
       </tr>
@@ -171,7 +171,7 @@ Portals respond to any player move event, this allows almost instant teleportati
           Apply reverse transform on rising edge
         </td>
         <td>
-          <a href="/modules/filters">Dynamic Filter</a>
+          <a href="/docs/modules/mechanics/filters">Dynamic Filter</a>
         </td>
         <td></td>
       </tr>
@@ -195,7 +195,7 @@ Portals respond to any player move event, this allows almost instant teleportati
           </i>
         </td>
         <td>
-          <a href="/modules/filters">Dynamic Filter</a>
+          <a href="/docs/modules/mechanics/filters">Dynamic Filter</a>
         </td>
         <td></td>
       </tr>
@@ -213,7 +213,7 @@ Portals respond to any player move event, this allows almost instant teleportati
           Filter portal observer access.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td>
           <label>{`<always/>`}</label>
@@ -323,7 +323,7 @@ Portals respond to any player move event, this allows almost instant teleportati
           Region where this portals entrance is located.
         </td>
         <td>
-          <a href="/modules/regions">Regions</a>
+          <a href="/docs/modules/mechanics/regions">Regions</a>
         </td>
       </tr>
       <tr>
@@ -343,7 +343,7 @@ Portals respond to any player move event, this allows almost instant teleportati
           <i>Region is automatically filtered against block place.</i>
         </td>
         <td>
-          <a href="/modules/regions">Randomize-able Regions</a>
+          <a href="/docs/modules/mechanics/regions">Randomize-able Regions</a>
         </td>
       </tr>
       <tr>
@@ -360,7 +360,7 @@ Portals respond to any player move event, this allows almost instant teleportati
           Filter portal player access.
         </td>
         <td>
-          <a href="/modules/filters">Filters</a>
+          <a href="/docs/modules/mechanics/filters">Filters</a>
         </td>
       </tr>
       <tr>
@@ -377,7 +377,7 @@ Portals respond to any player move event, this allows almost instant teleportati
           Apply forward transform on rising edge
         </td>
         <td>
-          <a href="/modules/filters">Dynamic Filters</a>
+          <a href="/docs/modules/mechanics/filters">Dynamic Filters</a>
         </td>
         <td></td>
       </tr>
@@ -395,7 +395,7 @@ Portals respond to any player move event, this allows almost instant teleportati
           Apply reverse transform on rising edge
         </td>
         <td>
-          <a href="/modules/filters">Dynamic Filters</a>
+          <a href="/docs/modules/mechanics/filters">Dynamic Filters</a>
         </td>
         <td></td>
       </tr>
@@ -419,7 +419,7 @@ Portals respond to any player move event, this allows almost instant teleportati
           </i>
         </td>
         <td>
-          <a href="/modules/filters">Dynamic Filters</a>
+          <a href="/docs/modules/mechanics/filters">Dynamic Filters</a>
         </td>
         <td></td>
       </tr>
@@ -437,7 +437,7 @@ Portals respond to any player move event, this allows almost instant teleportati
           Filter portal observer access.
         </td>
         <td>
-          <a href="/modules/filters">Filters</a>
+          <a href="/docs/modules/mechanics/filters">Filters</a>
         </td>
       </tr>
     </tbody>
