--- a/docs/modules/mechanics/proximity-alarms.mdx
+++ b/docs/modules/mechanics/proximity-alarms.mdx
@@ -72,7 +72,7 @@ Flares will only be set off if a `flare-radius=""` is defined. If this attribute
           The region this alarm applies to.
         </td>
         <td>
-          <a href="/modules/regions">Region</a>
+          <a href="/docs/modules/mechanics/regions">Region</a>
         </td>
       </tr>
       <tr>
@@ -127,7 +127,7 @@ Flares will only be set off if a `flare-radius=""` is defined. If this attribute
           The region this alarm applies to, treated as a region union.
         </td>
         <td>
-          <a href="/modules/regions">Regions</a>
+          <a href="/docs/modules/mechanics/regions">Regions</a>
         </td>
       </tr>
       <tr>
@@ -136,7 +136,7 @@ Flares will only be set off if a `flare-radius=""` is defined. If this attribute
         </td>
         <td>Filter who gets detected by the proximity alarm.</td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
       </tr>
       <tr>
@@ -145,7 +145,7 @@ Flares will only be set off if a `flare-radius=""` is defined. If this attribute
         </td>
         <td>Filter who gets notified by the proximity alarm.</td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
       </tr>
     </tbody>
