--- a/docs/modules/mechanics/regions.mdx
+++ b/docs/modules/mechanics/regions.mdx
@@ -124,8 +124,7 @@ The area a region applies to is specified with one or more of the following elem
       </tr>
       <tr>
         <td>
-          <label>{`<below x="" y="" z="" id="abc"/>`}</label>|
-          <label>{`<above x="" y="" z="" id="abc"/>`}</label>
+          <label>{`<below x="" y="" z="" id="abc"/>`}</label>|<label>{`<above x="" y="" z="" id="abc"/>`}</label>
           <br />
           Half of the world split at the specified axis.
           <br />
@@ -214,7 +213,7 @@ The order in which apply elements are specified determines which takes precedenc
           The region this apply affects.
         </td>
         <td>
-          <a href="/modules/regions">Region</a>
+          <a href="/docs/modules/mechanics/regions">Region</a>
         </td>
         <td></td>
       </tr>
@@ -232,7 +231,7 @@ The order in which apply elements are specified determines which takes precedenc
           Filter player enter events.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td></td>
       </tr>
@@ -250,7 +249,7 @@ The order in which apply elements are specified determines which takes precedenc
           Filter player leave events.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td></td>
       </tr>
@@ -268,7 +267,7 @@ The order in which apply elements are specified determines which takes precedenc
           Filter block place and break events.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td></td>
       </tr>
@@ -286,7 +285,7 @@ The order in which apply elements are specified determines which takes precedenc
           Filter block place events.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td></td>
       </tr>
@@ -304,7 +303,7 @@ The order in which apply elements are specified determines which takes precedenc
           Filter block place against events.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td></td>
       </tr>
@@ -322,7 +321,7 @@ The order in which apply elements are specified determines which takes precedenc
           Filter block break events.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td></td>
       </tr>
@@ -340,7 +339,7 @@ The order in which apply elements are specified determines which takes precedenc
           Filter world block updates; water flowing, portals disappearing, etc.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td></td>
       </tr>
@@ -358,7 +357,7 @@ The order in which apply elements are specified determines which takes precedenc
           Filter right-click events.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td></td>
       </tr>
@@ -401,7 +400,7 @@ The order in which apply elements are specified determines which takes precedenc
           Give a kit to players entering the region.
         </td>
         <td>
-          <a href="/modules/kits">Kit</a>
+          <a href="/docs/modules/gear/kits">Kit</a>
         </td>
         <td></td>
       </tr>
@@ -422,7 +421,7 @@ The order in which apply elements are specified determines which takes precedenc
           removable.
         </td>
         <td>
-          <a href="/modules/kits">Kit</a>
+          <a href="/docs/modules/gear/kits">Kit</a>
         </td>
         <td></td>
       </tr>
@@ -450,7 +449,7 @@ The order in which apply elements are specified determines which takes precedenc
           Filter when/if kits and velocities are applied.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td></td>
       </tr>
@@ -673,7 +672,7 @@ Input can be a region, a region modifier or simply an exact `X,Y,Z` coordinate.
           The region the point provider modifies.
         </td>
         <td>
-          <a href="/modules/regions">Randomize-able Region</a>
+          <a href="/docs/modules/mechanics/regions">Randomize-able Region</a>
         </td>
       </tr>
       <tr>
@@ -748,7 +747,7 @@ Input can be a region, a region modifier or simply an exact `X,Y,Z` coordinate.
           The region or regions the point provider modifies.
         </td>
         <td>
-          <a href="/modules/regions">Randomize-able Regions</a>
+          <a href="/docs/modules/mechanics/regions">Randomize-able Regions</a>
         </td>
       </tr>
     </thead>
