--- a/docs/modules/mechanics/spawners.mdx
+++ b/docs/modules/mechanics/spawners.mdx
@@ -5,7 +5,7 @@ title: Spawners
 
 The `<spawners>` module provides an easy way of spawning entities and items into the world, without using actual spawner blocks and NBT editors.
 
-The module uses the same syntax as <a href="/modules/gear/kits">kits</a> to define items and makes use of a specific <a href="/modules/mechanics/regions">region</a> to spawn them in.
+The module uses the same syntax as <a href="/docs/modules/gear/kits">kits</a> to define items and makes use of a specific <a href="/docs/modules/mechanics/regions">region</a> to spawn them in.
 
 <div className="alert alert--warning" style={{ marginBottom: "30px" }}>
   Currently, only dropped items are supported by this module. Other types of
@@ -72,7 +72,7 @@ The module uses the same syntax as <a href="/modules/gear/kits">kits</a> to defi
           which to spawn the target entities.
         </td>
         <td>
-          <a href="/modules/mechanics/regions">Region</a>
+          <a href="/docs/modules/mechanics/regions">Region</a>
         </td>
         <td />
       </tr>
@@ -87,7 +87,7 @@ The module uses the same syntax as <a href="/modules/gear/kits">kits</a> to defi
           active.{" "}
         </td>
         <td>
-          <a href="/modules/mechanics/regions">Region</a>
+          <a href="/docs/modules/mechanics/regions">Region</a>
         </td>
         <td />
       </tr>
@@ -156,7 +156,7 @@ The module uses the same syntax as <a href="/modules/gear/kits">kits</a> to defi
           least one player in <label>player-region</label> meets criteria.{" "}
         </td>
         <td>
-          <a href="/modules/mechanics/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td />
       </tr>
@@ -184,7 +184,7 @@ The module uses the same syntax as <a href="/modules/gear/kits">kits</a> to defi
           An item that will be dropped in the <label>spawn-region</label>
         </td>
         <td>
-          <a href="/modules/gear/items">Item</a>
+          <a href="/docs/modules/gear/items">Item</a>
         </td>
       </tr>
     </tbody>
