--- a/docs/modules/mechanics/spawns.mdx
+++ b/docs/modules/mechanics/spawns.mdx
@@ -83,7 +83,7 @@ Respawn behavior such as delays, etc. can be customized with the [respawn](#resp
         </td>
         <td>The team this spawn applies to.</td>
         <td>
-          <a href="/modules/teams">Team ID</a>
+          <a href="/docs/modules/format/teams">Team ID</a>
         </td>
         <td></td>
       </tr>
@@ -164,7 +164,7 @@ Respawn behavior such as delays, etc. can be customized with the [respawn](#resp
           The kit to apply to players when they are spawned in this spawn.
         </td>
         <td>
-          <a href="/modules/kits">Kit ID</a>
+          <a href="/docs/modules/gear/kits">Kit ID</a>
         </td>
         <td></td>
       </tr>
@@ -182,7 +182,7 @@ Respawn behavior such as delays, etc. can be customized with the [respawn](#resp
           Filter when this spawn is used.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td></td>
       </tr>
@@ -208,7 +208,7 @@ Respawn behavior such as delays, etc. can be customized with the [respawn](#resp
         </td>
         <td>The region or regions where players will spawn.</td>
         <td>
-          <a href="/modules/regions">Regions</a>
+          <a href="/docs/modules/mechanics/regions">Regions</a>
         </td>
       </tr>
     </tbody>
