--- a/docs/modules/objectives/blitz.mdx
+++ b/docs/modules/objectives/blitz.mdx
@@ -8,7 +8,7 @@ Each player has a limited amount of lives, and after they are used up the player
 The match ends after the specified amount of time, or when one team is eliminated.
 If the match timer ends before a team is eliminated the team with the most players remaining wins.
 
-The blitz module is used with the [Ghost Squadron](/modules/gamemode_other#gs) gamemode, and is also often combined with the [rage](/modules/gamemode_other#rage) module.
+The blitz module is used with the [Ghost Squadron](/docs/modules/objectives/other#gs) gamemode, and is also often combined with the [rage](/docs/modules/objectives/other#rage) module.
 
 Blitz maps should include the [global blitz XML](https://maps.oc.tc/Blitz/blitz-global.xml) file.
 
