--- a/docs/modules/objectives/control-points.mdx
+++ b/docs/modules/objectives/control-points.mdx
@@ -3,7 +3,7 @@ id: control-points
 title: Control Points
 ---
 
-Control point give a certain amount of point to the team currently holding it. Once a team has captured all points, or reached a certain score (using the [score module](/modules/scoring)) the match ends. Control points can be mixed with and used in addition to other gamemodes. Other uses of control points include unlocking an area of the map using objective filters, etc.
+Control point give a certain amount of point to the team currently holding it. Once a team has captured all points, or reached a certain score (using the [score module](/docs/modules/objectives/scoring)) the match ends. Control points can be mixed with and used in addition to other gamemodes. Other uses of control points include unlocking an area of the map using objective filters, etc.
 
 ```xml
 <control-points capture-players="lead" incremental="true" show-progress="true">
@@ -263,7 +263,7 @@ Control point give a certain amount of point to the team currently holding it. O
         </td>
         <td>The team owning the control point when the match starts.</td>
         <td>
-          <a href="/modules/teams">Team ID</a>
+          <a href="/docs/modules/format/teams">Team ID</a>
         </td>
         <td colspan="2"></td>
       </tr>
@@ -297,7 +297,7 @@ Control point give a certain amount of point to the team currently holding it. O
           </i>
         </td>
         <td>
-          <a href="/modules/filters">Block Filter</a>
+          <a href="/docs/modules/mechanics/filters">Block Filter</a>
         </td>
         <td colspan="2"></td>
       </tr>
@@ -316,7 +316,7 @@ Control point give a certain amount of point to the team currently holding it. O
           Region where this control point can be captured.
         </td>
         <td>
-          <a href="/modules/regions">Region</a>
+          <a href="/docs/modules/mechanics/regions">Region</a>
         </td>
         <td colspan="2"></td>
       </tr>
@@ -334,7 +334,7 @@ Control point give a certain amount of point to the team currently holding it. O
           Region where this control points progress is displayed.
         </td>
         <td>
-          <a href="/modules/regions">Bounded Region</a>
+          <a href="/docs/modules/mechanics/regions">Bounded Region</a>
         </td>
         <td colspan="2"></td>
       </tr>
@@ -352,7 +352,7 @@ Control point give a certain amount of point to the team currently holding it. O
           Region where this control points owner is displayed.
         </td>
         <td>
-          <a href="/modules/regions">Bounded Region</a>
+          <a href="/docs/modules/mechanics/regions">Bounded Region</a>
         </td>
         <td colspan="2"></td>
       </tr>
@@ -373,7 +373,7 @@ Control point give a certain amount of point to the team currently holding it. O
           if neutral-state is enabled.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td colspan="2"></td>
       </tr>
@@ -392,7 +392,7 @@ Control point give a certain amount of point to the team currently holding it. O
           this filter cannot affect the control point in any way.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td colspan="2"></td>
       </tr>
@@ -427,7 +427,7 @@ Control point give a certain amount of point to the team currently holding it. O
           The region players have to stand in to capture the control point.
         </td>
         <td>
-          <a href="/modules/regions">Regions</a>
+          <a href="/docs/modules/mechanics/regions">Regions</a>
         </td>
       </tr>
       <tr>
@@ -444,7 +444,7 @@ Control point give a certain amount of point to the team currently holding it. O
           The region to display capture progress.
         </td>
         <td>
-          <a href="/modules/regions">Bounded Regions</a>
+          <a href="/docs/modules/mechanics/regions">Bounded Regions</a>
         </td>
       </tr>
       <tr>
@@ -461,7 +461,7 @@ Control point give a certain amount of point to the team currently holding it. O
           The region to display if the control point is captured.
         </td>
         <td>
-          <a href="/modules/regions">Bounded Regions</a>
+          <a href="/docs/modules/mechanics/regions">Bounded Regions</a>
         </td>
       </tr>
       <tr>
@@ -481,7 +481,7 @@ Control point give a certain amount of point to the team currently holding it. O
           if neutral-state is enabled.
         </td>
         <td>
-          <a href="/modules/filters">Filters</a>
+          <a href="/docs/modules/mechanics/filters">Filters</a>
         </td>
       </tr>
       <tr>
@@ -499,7 +499,7 @@ Control point give a certain amount of point to the team currently holding it. O
           this filter cannot affect the control point in any way.
         </td>
         <td>
-          <a href="/modules/filters">Filters</a>
+          <a href="/docs/modules/mechanics/filters">Filters</a>
         </td>
       </tr>
     </tbody>
