--- a/docs/modules/objectives/ctw.mdx
+++ b/docs/modules/objectives/ctw.mdx
@@ -103,7 +103,7 @@ Players have to retrieve wool blocks from the enemy teams side of the map and th
           The team which has to place the wool.
         </td>
         <td>
-          <a href="/modules/teams">Team ID</a>
+          <a href="/docs/modules/format/teams">Team ID</a>
         </td>
         <td></td>
       </tr>
@@ -135,7 +135,7 @@ Players have to retrieve wool blocks from the enemy teams side of the map and th
           The monument where the wool has to be placed.
         </td>
         <td>
-          <a href="/modules/regions">Region</a>
+          <a href="/docs/modules/mechanics/regions">Region</a>
         </td>
         <td></td>
       </tr>
@@ -273,7 +273,7 @@ Players have to retrieve wool blocks from the enemy teams side of the map and th
           The monument where the wool has to be placed.
         </td>
         <td>
-          <a href="/modules/regions">Region</a>
+          <a href="/docs/modules/mechanics/regions">Region</a>
         </td>
       </tr>
     </tbody>
