--- a/docs/modules/objectives/dtc.mdx
+++ b/docs/modules/objectives/dtc.mdx
@@ -106,7 +106,7 @@ Players have to locate and break the enemy team's core, usually an obsidian sphe
           the core.
         </td>
         <td>
-          <a href="/modules/regions">Bounded Region</a>
+          <a href="/docs/modules/mechanics/regions">Bounded Region</a>
         </td>
         <td></td>
       </tr>
@@ -146,7 +146,7 @@ Players have to locate and break the enemy team's core, usually an obsidian sphe
           Team the core belongs to, i.e. its owner.
         </td>
         <td>
-          <a href="/modules/teams">Team ID</a>
+          <a href="/docs/modules/format/teams">Team ID</a>
         </td>
         <td></td>
       </tr>
@@ -156,7 +156,7 @@ Players have to locate and break the enemy team's core, usually an obsidian sphe
         </td>
         <td>
           Specify if this core uses{" "}
-          <a href="/modules/monument_modes">monument modes</a>
+          <a href="/docs/modules/objectives/monument-modes">monument modes</a>
         </td>
         <td>
           <span className="badge badge--primary">true/false</span>
@@ -239,7 +239,7 @@ Players have to locate and break the enemy team's core, usually an obsidian sphe
           the core.
         </td>
         <td>
-          <a href="/modules/regions">Bounded Regions</a>
+          <a href="/docs/modules/mechanics/regions">Bounded Regions</a>
         </td>
       </tr>
     </tbody>
