--- a/docs/modules/objectives/dtm.mdx
+++ b/docs/modules/objectives/dtm.mdx
@@ -112,7 +112,7 @@ Completion specifies how much of the material(s) inside of the monument region m
           Region containing the destroyable.
         </td>
         <td>
-          <a href="/modules/regions">Bounded Region</a>
+          <a href="/docs/modules/mechanics/regions">Bounded Region</a>
         </td>
         <td></td>
       </tr>
@@ -139,7 +139,7 @@ Completion specifies how much of the material(s) inside of the monument region m
           The destroyables owner.
         </td>
         <td>
-          <a href="/modules/teams">Team ID</a>
+          <a href="/docs/modules/format/teams">Team ID</a>
         </td>
         <td></td>
       </tr>
@@ -161,7 +161,7 @@ Completion specifies how much of the material(s) inside of the monument region m
         </td>
         <td>
           Specify if this destroyable uses custom{" "}
-          <a href="/modules/monument_modes">monument modes</a>
+          <a href="/docs/modules/objectives/monument-modes">monument modes</a>
         </td>
         <td>
           <span className="badge badge--primary">true/false</span>
@@ -277,7 +277,7 @@ Completion specifies how much of the material(s) inside of the monument region m
           Region containing the destroyable.
         </td>
         <td>
-          <a href="/modules/regions">Bounded Regions</a>
+          <a href="/docs/modules/mechanics/regions">Bounded Regions</a>
         </td>
       </tr>
     </tbody>
