--- a/docs/modules/objectives/other.mdx
+++ b/docs/modules/objectives/other.mdx
@@ -41,7 +41,7 @@ One hit kills will only be applied to items that have a sharpness enchantment gr
 
 ### Team Death-match
 
-This gamemode uses the [scoring](/modules/scoring) module to run the game for a specified amount of time, after which the team with the highest score wins. Teams increase their score by killing players from the other team or capturing points from a [score box](/modules/scoring#score_box).
+This gamemode uses the [scoring](/docs/modules/objectives/scoring) module to run the game for a specified amount of time, after which the team with the highest score wins. Teams increase their score by killing players from the other team or capturing points from a [score box](/docs/modules/objectives/scoring#score_box).
 
 `NOTE:` To be able to score points for kills and deaths the `<kills>` and `<deaths>` elements are required.
 
@@ -57,7 +57,7 @@ This gamemode uses the [scoring](/modules/scoring) module to run the game for a 
 
 ### Free-For-All
 
-The FFA gamemode uses the [players](/modules/players) instead of the [teams](/modules/teams) module to create a team-less match.
+The FFA gamemode uses the [players](/docs/modules/format/players) instead of the [teams](/docs/modules/format/teams) module to create a team-less match.
 Depending on the modules used, players can increase their score by killing other players until a score or time limit is reached or by capturing objectives, etc.
 
 `NOTE:` To be able to score points for kills and deaths the `<kills>` and `<deaths>` elements are required.
