--- a/docs/modules/objectives/scoring.mdx
+++ b/docs/modules/objectives/scoring.mdx
@@ -91,7 +91,7 @@ Example
 
 #### Score Boxes
 
-A score box will give points to a players team when they enter or bring a redeemable item to the score box region. [Portals](/modules/portals) should be setup to remove the player from the immediate vicinity of the score box to prevent multiple scores.
+A score box will give points to a players team when they enter or bring a redeemable item to the score box region. [Portals](/docs/modules/mechanics/portals) should be setup to remove the player from the immediate vicinity of the score box to prevent multiple scores.
 
 <div className="table-container">
   <table>
@@ -164,7 +164,7 @@ A score box will give points to a players team when they enter or bring a redeem
           The location and size of the score box.
         </td>
         <td>
-          <a href="/modules/regions">Region</a>
+          <a href="/docs/modules/mechanics/regions">Region</a>
         </td>
         <td />
       </tr>
@@ -182,7 +182,7 @@ A score box will give points to a players team when they enter or bring a redeem
           Filter who can score in this box.
         </td>
         <td>
-          <a href="/modules/filters">Filter</a>
+          <a href="/docs/modules/mechanics/filters">Filter</a>
         </td>
         <td>
           <span className="badge badge--secondary">No Filter</span>
@@ -202,7 +202,7 @@ A score box will give points to a players team when they enter or bring a redeem
           Dynamic conditions under which this score box is applied.
         </td>
         <td>
-          <a href="/modules/filters">Dynamic Filter</a>
+          <a href="/docs/modules/mechanics/filters">Dynamic Filter</a>
         </td>
         <td />
       </tr>
@@ -246,7 +246,7 @@ A score box will give points to a players team when they enter or bring a redeem
           The region where this score box is located.
         </td>
         <td>
-          <a href="/modules/regions">Regions</a>
+          <a href="/docs/modules/mechanics/regions">Regions</a>
         </td>
       </tr>
       <tr>
@@ -263,7 +263,7 @@ A score box will give points to a players team when they enter or bring a redeem
           Filter who can score in this box.
         </td>
         <td>
-          <a href="/modules/regions">Filters</a>
+          <a href="/docs/modules/mechanics/regions">Filters</a>
         </td>
       </tr>
       <tr>
@@ -280,7 +280,7 @@ A score box will give points to a players team when they enter or bring a redeem
           Dynamic conditions under which this score box is applied.
         </td>
         <td>
-          <a href="/modules/filters">Dynamic Filters</a>
+          <a href="/docs/modules/mechanics/filters">Dynamic Filters</a>
         </td>
       </tr>
     </tbody>
