--- a/docs/modules/gear/item-mods.mdx
+++ b/docs/modules/gear/item-mods.mdx
@@ -187,7 +187,7 @@ the modify element does not currently support the projectile or grenade attribut
         </td>
         <td>This item's enchantments.</td>
         <td>
-          <a href="/modules/items#enchantments">Enchantments</a>
+          <a href="/docs/modules/gear/items#enchantments">Enchantments</a>
         </td>
       </tr>
       <tr>
@@ -196,7 +196,7 @@ the modify element does not currently support the projectile or grenade attribut
         </td>
         <td>A custom potion effect, only applies for potion items.</td>
         <td>
-          <a href="/modules/potions">Potion Effect</a>
+          <a href="/docs/modules/gear/potions">Potion Effect</a>
         </td>
       </tr>
       <tr>
@@ -205,7 +205,7 @@ the modify element does not currently support the projectile or grenade attribut
         </td>
         <td>Custom attributes for this item.</td>
         <td>
-          <a href="/modules/items#attributes">Attribute Modifiers</a>
+          <a href="/docs/modules/gear/items#attributes">Attribute Modifiers</a>
         </td>
       </tr>
       <tr>
@@ -214,7 +214,7 @@ the modify element does not currently support the projectile or grenade attribut
         </td>
         <td>The materials that can be mined with the item.</td>
         <td>
-          <a href="/modules/items#can-destroy">Can Destroy</a>
+          <a href="/docs/modules/gear/items#can-destroy">Can Destroy</a>
         </td>
       </tr>
       <tr>
@@ -223,7 +223,7 @@ the modify element does not currently support the projectile or grenade attribut
         </td>
         <td>Materials that the item can be placed on.</td>
         <td>
-          <a href="/modules/items#can-destroy">Can Place On</a>
+          <a href="/docs/modules/gear/items#can-destroy">Can Place On</a>
         </td>
       </tr>
     </tbody>
